# dream-weaver-pal

./: .commitlintrc.json  .env  .env.example  ARCHITECTURE.md  BOBBY_ARCHITECTURE_v1.md  BOBBY_BOM_v2.xlsx  BOBBY_BRAIN_V6_ARCHITECTURE.md  BOBBY_BRAIN_V7_ARCHITECTURE.md  BOBBY_BRAIN_V8_ARCHITECTURE.md  BOBBY_HARDWARE_v2.md  BOBBY_VALIDATION_REPORT_v1.docx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-firmware.yml  ci.yml  codeql.yml  deploy-cloud.yml  deploy-web.yml
apps/web/: README.md
docs/architecture/: v8-gap-analysis.md
docs/brain/: V8.md
docs/ops/: github-push-procedure.md  migration-from-dream-weaver-pal.md  test-runbook.md
docs/product/: roadmap.md
firmware/watcher/: INTEGRATION.md  README.md
firmware/watcher/components/bobby_api/: CMakeLists.txt  README.md  bobby_api.c
firmware/watcher/components/bobby_api/certs/: README.md
firmware/watcher/components/bobby_api/include/: bobby_api.h
public/: bobby-demo.mov  manifest.json  pcm-worker.js
services/cloud/: README.md
src/: App.tsx  index.css  main.tsx
src/components/: AdminDetailDialog.tsx  AdminStoreManager.tsx  AutoLearnPanel.tsx  BobbyErrorBoundary.tsx  BobbyStore.tsx  ChatMessage.tsx  ChatScreen.tsx  ConfirmDialog.tsx  (+17 more)
supabase/: config.toml
tests/: cloud-integration.test.ts
(+337 files in other folders)
